--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@ characters from the user.</li>
     
         </ul>
         </div>
-        <script src="../../main/prism.js">/* PrismJS 1.29.0
+        <script>/* PrismJS 1.29.0
 https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+c+csharp+cpp+css-extras+dax+java&plugins=line-highlight+highlight-keywords+inline-color+toolbar */
 /// <reference lib="WebWorker"/>
 
@@ -4812,7 +4812,7 @@ Prism.languages.dax = {
 	Prism.hooks.add('complete', hook);
 }());
 </script>
-        <script src="../../main/app.js">//A C T I V E    C L A SS 
+        <script>//A C T I V E    C L A SS 
 const current = location.href;
 const menu = document.querySelectorAll('.sidebar ul a');
 console.log(menu);
